Fix bug in full bleed images

--- a/assets/css/ghost/content.css
+++ b/assets/css/ghost/content.css
@@ -68,6 +68,10 @@
     grid-column: full-start / full-end;
 }
 
+.kg-width-full img {
+    width: 100%;
+}
+
 
 /* Content & Typography
 /* ---------------------------------------------------------- */
